--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-static==0.0.5
 django-haystack==2.1.0
 gunicorn==19.0.0
 honcho==0.5.0
+psycopg2==2.5.3
 pyelasticsearch==0.6.1
 pystache==0.5.4
 requests==2.3.0
